landingpage & menu fixed

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
   </div>
 
   <div class="menu">
-    <ul>
-      <li><button id="start" type="button" name="button" onclick="startGame();">Jogar</button></li>
-      <li><button id="options" type="button" name="button">Opções</button></li>
-    </ul>
+    <nav>
+      <ul>
+        <li><span onclick="startGame();">PLAY</span></li>
+        <li><span id="leaderboard">LEADERBOARD</span></li>
+        <li><span onclick="window.close();">QUIT</span></li>
+      </ul>
+    </nav>
   </div>
+
 
   <div class="game-over">
     <p>GAME OVER</p>
