added countdown and fixed round switching

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
     <h3>Asteróides</h3>
   </div>
 
+  <div class="countdown">
+    <p class="text">4</p>
+  </div>
+
   <img src="img/spaceship.svg" id="nave-play">
-  
+
   <div class="menu">
     <nav>
       <ul>
