fixed bugs with positions and animations

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
   <div class="game-over">
     <p>GAME OVER</p>
+    <button id="render-menu" onclick="mainMenu()">Menu Principal</button>
     <button onclick="startGame();">Recomeçar</button>
   </div>
     
