Animation to landing page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   
   <div class="intro">
     <h3>Asteróides</h3>
+    <div class="sun"></div>
+    <div class="moon moon_orbit">
+      <img src="img/spaceship_fire.svg" id="nave-intro" class="nave_orbit">
+    </div>
   </div>
 
   <div class="countdown">
