Name input & style changes

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
   <div class="menu">
     <nav>
       <ul>
+        <div class="user_data form">
+          <input type="input" class="form_name" placeholder="Name:" name="name" id='name' minlength="3" maxlength="15" required />
+          <label for="name" class="label_name">Name: </label>
+        </div>
+
         <li id="play"><span>PLAY</span></li>
 
         <img src="img/spaceship_fire.svg" id="nave-leaderboard">
