Updated animations landing page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   
   <div class="intro">
-    <h3>Asteróides</h3>
+    <h3 class="floating-intro">Asteróides</h3>
     <div class="sun"></div>
     <div class="moon moon_orbit">
       <img src="img/spaceship_fire.svg" id="nave-intro" class="nave_orbit">
