added audio fx and fixed bugs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 </head>
 
 <body>
-  <audio id="menu-hover" src="assets/menu-hover.wav"></audio>
+  <audio id="MenuHover" src="assets/MenuHover.wav"></audio>
+  <audio id="AsteroidExplosion" src="assets/AsteroidExplosion.wav"></audio>
+  <audio id="ThrustSound" src="assets/ThrustSound.wav"></audio>
+  <audio id="LaserShoot" src="assets/LaserShoot.wav"></audio>
+  <audio id="ShipExplosion" src="assets/ShipExplosion.wav"></audio>
+  <audio id="RoundPass" src="assets/RoundPass.wav"></audio>
+  <audio id="LifeGain" src="assets/LifeGain.wav"></audio>
+  <audio id="GameOver" src="assets/GameOver.wav"></audio>
+  <audio id="Teleport" src="assets/Teleport.wav"></audio>
 
   <div class="pop-up">
     <h1>Este jogo utiliza efeitos sonoros para uma experiência mais imersiva</h1>
@@ -68,68 +76,7 @@
           <th>Nível</th>
         </tr>
       </thead>
-      <tbody id="render-lb">
-        <tr>
-          <td>1</td>
-          <td>DARWIN</td>
-          <td>24642</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>DARWIN</td>
-          <td>24642</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>DARWIN</td>
-          <td>24642</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>DARWIN</td>
-          <td>24642</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>DARWIN</td>
-          <td>24642</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>DARWIN</td>
-          <td>24642</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>DARWIN</td>
-          <td>24642</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>DARWIN</td>
-          <td>24642</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>DARWIN</td>
-          <td>24642</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>DARWIN</td>
-          <td>24642</td>
-          <td>8</td>
-        </tr>
-      </tbody>
+      <tbody id="render-lb"></tbody>
     </table>
     <button type="button" onclick="document.querySelector('.leaderboard').style.display = 'none';">Voltar</button>
   </div>
