--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
       <button onclick="document.querySelector('.pop-up').style.display = 'none';">Não</button>
     </div>
   </div>
-  
+
   <div class="intro">
+    <div class="floating-asteroids">
+      <img style="position: absolute;" src="img/asteroid2.svg">
+      <img style="position: absolute;" src="img/asteroid2.svg">
+      <img style="position: absolute;" src="img/asteroid2.svg">
+    </div>
     <h3 class="floating-intro">Asteróides</h3>
     <div class="sun"></div>
     <div class="moon moon_orbit">
